--- a/Nivel1-A/Documentos/Guia/guia2.tex
+++ b/Nivel1-A/Documentos/Guia/guia2.tex
@@ -1,72 +1,61 @@
 \chapter{Principios físicos}
 
-El objetivo de esta clase es familiarizarze con los conceptos de combinación de bandas y firma espectral, utilizando nuevamente el software SNAP. Se realizarán diferentes combinaciones de bandas teniendo en cuenta la respuesta de los usos y coberturas en función de la combinación de colores. 
-
-
+El objetivo de esta clase es familiarizarze con los conceptos de combinación de banda y firma espectral.  
 
 
 
 \section{Combinación de bandas}
-En esta ocasión vamos a realizar diferentes combinaciones de bandas analizando en la visualización, la variación de los diferentes usos y coberturas del suelo y la vegetación en la imagen/escena.
+Se realizarán combinaciones de bandas teniendo en cuenta la respuesta espectral de los distintos usos y coberturas.
 
 %desarrollar un poco
 
 \subsection{Combinación color real}\label{sec:colorreal}
 
 Abra la imagen \begin{center} \directory{S2B\_MSIL2A\_2018-01-31.dim}.
-\end{center} seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación color real que utiliza las bandas \emph{rojo (B4)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
+\end{center} seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre. La nueva ventana (Figura \ref{fig:RGB} Guía Clase 1), le permitirá elegir la combinación de bandas. Por defecto aparecerá la combinación color real que utiliza las bandas del \emph{rojo (B4)}, \emph{verde (B3)} y \emph{azul (B2)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}.
 
-En esta combinación, las características del suelo aparecen en colores similares a su apariencia para el sistema visual humano. Es así que la vegetación sana se observa en tonalidades de verde, los suelos recientemente cosechados o compactados se observan brillantes, en tanto que la vegetación senescente o de escasa cobertura se observa en tonos de marrón y amarillo. Por otro lado, esta combinación de bandas presenta mayor respuesta a cuerpos de agua, resaltando características como sedimentos, profundidad o presencia de floraciones algales.
+La imagen se observa en colores similares a los que vería el ojo humano. Es así que la vegetación sana aparece en tonalidades de verde, la vegetación senescente o de escasa cobertura en tonos de marrón o amarillo y los suelos recientemente cosechados o compactados se observan brillantes. Esta combinación de bandas posibilita una buena diferenciación de los cuerpos de agua, resaltando características como la presencia de sedimentos o floraciones algales y la profundidad.
 
-Utilice el mapa con puntos de interés para identificar y familiarizarse con los diferentes usos y coberturas (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
+Utilice el mapa con puntos de interés (Figura \ref{fig:mapa} Guía Clase 1) para identificar y familiarizarse con los diferentes usos y coberturas. Explore la imagen utilizando las herramientas de navegación y zoom. Compare color, tono y textura.
 
 
 \subsection{Combinación infrarrojo color}
 \label{sec:infrarrojocolor}
 
-Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B3)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
+Seleccione \menu{Open RGB image windows}, elija las bandas \emph{infrarrojo cercano (B8)}, \emph{verde(B4)} y \emph{azul(B3)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}. 
 
-En esta combinación, la vegetación aparece en tonos de rojo y magenta, las áreas urbanas se pueden observar en tonos de cian y los suelos varían en tonos de verde. El agua, por su parte, varía en tonos de azul. La vegetación leñosa (bosques) puede observarse en tonos rojizos en tanto que la vegetación herbácea (pastizales y cultivos) puede observarse en magenta. Esta combinación es útil para estudios de vegetación ya que resalta la relación entre el infrarrojo cercano y el rojo. Las áreas urbanas densamente pobladas se muestran en azul claro.
+En esta combinación la vegetación leñosa como el bosque, varía en tonos rojizos y, la vegetación herbacea como los pastizales y cultivos, se visualizan en magenta. Los suelos se muestran en diversos tonos de verde y las áreas urbanas aparecen en cian tendiendo al azul cuando se encuentran densamente pobladas.
+Esta combinación de bandas es útil para el estudio de la vegetación ya que resalta la relación entre la longitud de onda del rojo y del infrarrojo cercano.
 
-Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
+Utilice el mapa con puntos de interés (Figura \ref{fig:mapa} Guía 1) e identifique diferentes tipos de vegetación. Explore la imagen utilizando las herramientas de navegación y zoom. Compare color, tono y textura.
 
 \subsection{Combinación vegetación sana}
 \label{sec:vegetacionsana}
 
-Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Se desplegará una nueva ventana (Figura \ref{fig:RGB}) que le permitirá elegir la combinación de bandas. Seleccione las bandas \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2}. Desplieguela haciendo click en \menu{OK}.
+Seleccione \menu{Open RGB image windows} haciendo click derecho sobre el nombre de la imagen. Elija las bandas \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2}. Despliegue haciendo click en \menu{OK}.
 
-La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden estar en verdes y marrones, las áreas urbanas pueden observarse en blanco y cian, las áreas de color azul intenso representan suelos sin cobertura vegetal y las áreas color rosa muestran vegetación en crecimiento . El agua clara y profunda se observa oscura; si el agua es poco profunda o contiene sedimentos, aparecería como tonos de azul más claro. Para estudios de vegetación, la adición de la banda del infrarrojo de onda corta aumenta la sensibilidad para identificar estrés hídrico y variaciones en el contenido de humedad en la vegetación y suelos.
+La vegetación saludable aparece en tonos de rojos, marrones, naranjas y amarillos. Los suelos pueden observarse en variedades de verde y marrón. Los suelos sin cobertura vegetal estarán en azul intenso, mientras que aquellos con vegetación en crecimiento se mostrarán rosados. El agua clara y profunda se percibe oscura mientras que, si es profunda o contiene sedimentos, aparecerá con tonos de azul más claro.
+La adición de la banda del infrarrojo de onda corta aumenta la sensibilidad para identificar estrés hídrico y variaciones del contenido de humedad en la vegetación y suelos.
 
-Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}). Explore la ubicación de los puntos mencionados utilizando las herramientas de navegación y zoom  (Figura \ref{fig:mono}). Compare color, tono y textura para cada punto.
+Utilice el mapa con puntos de interés para identificar diferentes tipos de vegetación (Figura \ref{fig:mapa}, Guía Clase 1). Explore la imagen utilizando las herramientas de navegación y zoom. Compare color, tono y textura.
 
 \section{Firmas espectrales}
 
 
-En esta ocasión vamos a analizar el comportamiento espectral de diferentes usos y coberturas.
+En esta ocasión se analizará el comportamiento espectral de diferentes usos y coberturas.
 
-\section{Seleccion de imagen}
+\subsection{Puntos de muestreo}
 
-Seleccione la combinación "vegetación sana" \emph{infrarrojo cercano (B8)}, \emph{infrarrojo onda corta(B11)} y \emph{azul(B2)} de \emph{Sentinel-2} y visualicela utilizando una sola ventana de la vista. Para ello vaya a \menu{Window} y seleccione \menu{Tile Single}
-
-\begin{figure}[h!]
-    \centering
-    \includegraphics[width=0.6\textwidth]{fig:multiple-single.png}
-    \caption{Distintas imágenes desplegadas en multiples visualizadores en simultaneo.}
-    \label{fig:multiples}
-\end{figure}
-
-\section{Utilización de puntos}
-
-El siguiente paso será seleccionar puntos de interés en los cuales evaluaremos el comportamiento espectral de diferentes usos y coberturas del suelo. A tal fin utilizaremos la herramienta \menu{pin placing tool} para tomar puntos de muestreo para firmas espectrales.
+El siguiente paso será seleccionar puntos de interés para evaluar el comportamiento espectral de los diferentes usos y coberturas del suelo. Se utilizará la herramienta \menu{pin placing tool} (Figura \ref{fig:pin}) para tomar puntos de muestreo, sobre los cuales luego se graficarán las firmas espectrales.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.05\textwidth]{fig:pin.png}
-    \caption{Herramienta pin placing tool.}
+    \caption{Herramienta Pin placing tool.}
     \label{fig:pin}
 \end{figure}
 
-Identifique en el mapa (Figura \ref{fig:mapa}) un parche homogéneo de selva paranense y añada un pin con la herramienta \menu{pin placing tool}:
+Visualice la imagen en combinación de bandas vegetación sana e identifique un parche homogéneo de selva paranense. Seleccione la herramienta \menu{pin placing tool} y haga click sobre la imagen para agregar un Pin (Figura \ref{fig:selva}).
 
 \begin{figure}[h!]
     \centering
@@ -75,52 +64,56 @@ Identifique en el mapa (Figura \ref{fig:mapa}) un parche homogéneo de selva par
     \label{fig:selva}
 \end{figure}
 
-Para cambiar del Pin características como nombre o color ir a \menu{View>Tool Windows>Pin Manager}. Seleccionar en la columna \menu{label} el nombre Pin 1 y cambiar por "selva paranaense". En la columna \menu{color} asignar el color deseado.
+Para cambiar las características del Pin vaya a \menu{View>Tool Windows>Pin Manager} y aparecerá una nueva ventana con los datos del punto. Seleccione el nombre del Pin en la columna \menu{label} y cambielo por "selva paranaense". En la columna \menu{color} asigne el color deseado.
 
-\section{Visualización de firmas espectrales}
+\subsection{Visualización de firmas espectrales}
 
-Ahora procederemos a visualizar la firma espectral correspondiente al Pin creado. Seleccione \menu{Optical>Spectrum View}. Se desplegará el visor de firmas espectrales. Para visualizar el Pin creado, seleccione la herramienta \menu{Show spectra for all pins}
+Ahora visualice la firma espectral correspondiente al Pin creado. Seleccione \menu{Optical>Spectrum View} y se desplegará una nueva ventana. Haga click derecho sobre el gráfico y elija \menu{Auto Range>Both Axes}. Para obtener la firma espectral del Pin, seleccione la herramienta \menu{Show spectra for all pins} (Figura \ref{fig:spectral-signature}).
 
 
-Ahora procederemos a identificar y comparar firmas espectrales de diferentes usos y coberturas. Con la ayuda del mapa (Figura \ref{fig:mapa}) identifique parches homogéneos de bosque implantado, cultivo, suelo sin cobertura vegetal y cuerpo de agua e inserte en cada uno de ellos un pin con la herramienta \menu{pin placing tool}. A medida que vaya generando cada pin, recuerde modificarle las caracteristicas con la herramienta  \menu{View>Tool Windows>Pin Manager}. A continuación visualice las firmas correspondientes a los pins generados utilizando la herramienta \menu{Optical>Spectrum View}.
+Realice y compare las firmas espectrlales de bosque implantado, cultivo, suelo sin cobertura vegetal y cuerpo de agua. Recuerde insertar un pin para cada cobertura y modifique sus caracteristicas con el nombre nombre correspondiente.
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.7\textwidth]{fig:spectral-signature.png}
-    \caption{Ejemplo de firmas espectrales obtenidas}
+    \caption{Ejemplo de firmas espectrales.}
     \label{fig:spectral-signature}
 \end{figure}
 
 \section{Actividad práctica}
 \begin{enumerate}
-  \item Despliegue las tres combinaciones realizadas utilizando múltiples visualizadores(Figura \ref{fig:mono}). Utilice las herramientas \menu{Panning tool} y \menu{Zooming tool} e identifique la intersección del río Paraná y río Iguazú (Figura\ref{fig:mapa} punto de referencia 4):
+  \item Despliegue las tres combinaciones de la imagen utilizando múltiples visualizadores e identifique la intersección entre el río Paraná y el río Iguazú.
   \begin{enumerate}
-  \item Compare color y tono de los ríos Paraná e Iguazú. En base a interpretación visual ¿Que combinación considera la más adecuada para identificar sedimentos? ¿Cuál  considera que tiene mayor concentración de sedimentos?
-  \item  Desplácese hasta Puerto Iguazú (\ref{fig:mapa} punto de referencia 11) y analice el área urbana. ¿En qué combinación puede ver con mayor nitidez la red víal?
-  \item  Identifique el embalse Urugua-í (\ref{fig:mapa} punto de referencia 6) y compare la presencia de sedimentos con los ríos Paraná y Iguazú. ¿Cuál de ellos presenta menor concentración de sedimentos?
+  \item Compare el color y tono de ambos ríos. En base a la interpretación visual ¿Qué combinación de bandas considera la más adecuada para identificar la presencia de sedimentos? ¿Qué río tiene mayor concentración de sedimentos?.
+  
+  \item  Identifique la ciudad de Puerto Iguazú y analice el área urbana. ¿En qué combinación se puede ver con mayor nitidez la red víal?.
+  
+  \item  Identifique el embalse Urugua-í y compare la presencia de sedimentos con los ríos Paraná e Iguazú. ¿Cuál de ellos presenta menor concentración?.
 \end{enumerate}
 
-  \item Identifique en el mapa de referencia los puntos 1 y 4 correspondientes a Selva Paranaense y Bosque Implantado respectivamente (Figura\ref{fig:mapa}) y compare:
+  \item Identifique la Selva Paranaense y el Bosque Implantado
   \begin{enumerate}
-    \item  Compare color y tono de la selva paranaense y el bosque implantado para color natural.
-    \item  Compare color y tono de la selva paranaense y el bosque implantado para infrarrojo color.
-    \item  Compare color y tono de la selva paranaense y el bosque implantado para la combinación "vegetación sana".
-    \item Compare ahora ambas coberturas con los tres visualizadores. ¿En qué combinación encuentra mayor heterogeneidad? ¿Cuál considera que es la más útil para separar diferentes tipos de vegetación?
-    \item Compare un cultivo con cobertura vegetal contra un lote de suelo sin cobertura (\ref{fig:mapa} punto de referencia 8 y 9) ¿Qué combinación considera más útil para medir heterogeneidad para suelo sin cobertura vegetal? ¿y para suelos con vegetación?
+    \item  Compare el color y tono para la combinación de bandas color natural.
+    \item  Compare el color y tono para la combinación de bandas infrarrojo color.
+    \item  Compare el color y tono para la combinación "vegetación sana".
+    \item  ¿En qué combinación encuentra mayor heterogeneidad? ¿Cuál considera que es la más útil para separar diferentes tipos de vegetación?
   \end{enumerate}
+      
+  \item Compare un cultivo con cobertura vegetal y un lote de suelo sin cobertura  ¿Qué combinación considera más útil para medir heterogeneidad de un suelo sin cobertura vegetal? ¿y para suelos con vegetación?
 
-  \item Seleccione entre las pestañas abiertas la que corresponda a la combinación color real (Sección \ref{sec:colorreal}). Inserte un pin para el río Paraná, río Iguazú y embalse Urugua-í. Modifique el nombre y color de los mismos con la herramienta \menu{Pin Manager} y grafique con la herramienta \menu{Spectrum View}
+
+  \item Seleccione la imagen en combinación color real. Inserte un pin para el río Paraná, río Iguazú y embalse Urugua-í. Modifique sus caracteristicas y grafique sus firmas espectrales.
   \begin{enumerate}
       \item Compare las tres firmas espectrales. Analice el patrón de reflectancia. ¿Presentan todas el mismo patrón?
-      \item Identifique picos y valles de reflectancia. ¿Que cuerpo de agua presenta mayor reflectancia en el visible-NIR? ¿Cuál presenta menor? Analice los factores biofísicos que modelan este comportamiento.
+      \item Identifique picos y valles de reflectancia. ¿Qué cuerpo de agua presenta mayor reflectancia en el visible-NIR? ¿Cuál presenta menor? Analice los factores biofísicos que modelan este comportamiento.
     \end{enumerate}
 
-  \item Seleccione entre las pestañas abiertas la que corresponda a la combinación vegetación sana (Sección \ref{sec:vegetacionsana}). Inserte un pin para selva paranaense, bosque implantado, cultivo y suelo sin cobertura vegetal. Modifique el nombre y color de los mismos con la herramienta \menu{Pin Manager} y grafique con la herramienta \menu{Spectrum View}
+  \item Seleccione la imagen en combinación vegetación sana. Inserte un pin para selva paranaense, bosque implantado, cultivo y suelo sin cobertura vegetal. Modifique sus características y grafique sus firmas espectrales.
   \begin{enumerate}
-    \item Analice las cuatro firmas espectrales teniendo en cuenta los picos y valles de reflectancia de acuerdo a la longitud de onda correspondiente. ¿En qué longitudes de onda presenta mayor reflectancia la vegetación? ¿En cuáles presenta menor reflectancia? Analice teniendo en cuenta los parámetros fisiológicos que modelan este comportamiento.
-    \item Compare una firma de vegetación fotosintéticamente activa (e.g. selva paranaense) con otra de suelo sin cobertura vegetal. ¿Muestra una separación en el visible? ¿Y en el infrarrojo cercano? Analice donde se observan mayores diferencias.
+    \item Analice las cuatro firmas espectrales teniendo en cuenta los picos y valles de reflectancia de acuerdo a la longitud de onda. ¿En qué longitudes de onda presenta mayor reflectancia la vegetación? ¿En cuáles presenta menor reflectancia? Explique teniendo en cuenta los parámetros fisiológicos que modelan este comportamiento.
+    \item Compare una firma de vegetación fotosintéticamente activa (e.g. selva paranaense), con otra de suelo sin cobertura vegetal. ¿Pueden diferenciarse en el visible? ¿Y en el infrarrojo cercano? Analice donde se observan mayores diferencias.
   \end{enumerate}
-	\item Identifique un área urbana, añada un pin. Modifique nombre y color. Compare con el resto de las firmas espectrales. ¿Que diferencias observa con respecto a suelo sin cobertura vegetal? ¿En qué regiones del espectro las observa?
+	\item Identifique un área urbana, grafique su firma espectral y compare con el resto de las coberturas. ¿Qué diferencias observa con el suelo sin cobertura vegetal? 
   \end{enumerate}
 
 Estas preguntas y actividades no serán evaluadas. Su objetivo es discutirlas en el foro de consultas e intercambio de la clase.
